--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationContext": "Host=localhost;Port=5432;Database=contactsdb;Username=postgres;Password=password"
+  }
 }
