--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "AppSettings": {
+    "Secret": "contactsapp secret key for creating token 123 123 123"
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ApplicationContext": "Host=localhost;Port=5432;Database=contactsdb;Username=postgres;Password=password"
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "ApplicationContext": "Host=localhost;Port=5432;Database=contactsdb;Username=postgres;Password=password"
+    }
   }
-}
