--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -6,7 +6,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "less"
+          "style": "css"
         }
       },
       "root": "",
