--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,16 +9,17 @@
     "build": "ng build"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.1",
-    "@angular/cdk": "^9.2.0",
+    "@angular/animations": "^9.1.2",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
-    "@angular/material": "~9.2.0",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "zone.js": "~0.10.2"
   },
